--- a/website/index.html
+++ b/website/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="zxx">
-
 <head>
-
     <!-- Metas -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="HTML5 Template Vie onepage themeforest" />
-    <meta name="description" content="Vie - Onepage Multi-Purpose HTML5 Template" />
+    <meta name="keywords" content="HTML5 Template Tuft Place onepage themeforest" />
+    <meta name="description" content="Tuft Place - Onepage Multi-Purpose HTML5 Template" />
     <meta name="author" content="" />
 
     <!-- Title  -->
-    <title>Vie</title>
+    <title>Tuft Place</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="img/logoheader.png" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
@@ -26,6 +23,9 @@
 
     <!-- Plugins -->
     <link rel="stylesheet" href="css/plugins.css" />
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
+        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
 
     <!-- Core Style Css -->
     <link rel="stylesheet" href="css/style.css" />
@@ -33,17 +33,13 @@
 </head>
 
 <body class="position-r">
-
-
-
     <!-- ==================== Start Loading ==================== -->
-
-    <div class="loading">
+    <div class="loading text-center">
         <span>T</span>
         <span>u</span>
         <span>f</span>
         <span>t</span>
-        <span> </span>
+        <br>
         <span>P</span>
         <span>l</span>
         <span>a</span>
@@ -55,8 +51,6 @@
     </div>
 
     <!-- ==================== End Loading ==================== -->
-
-
     <!-- ==================== Start progress-scroll-button ==================== -->
 
     <div class="progress-wrap cursor-pointer">
@@ -66,17 +60,12 @@
     </div>
 
     <!-- ==================== End progress-scroll-button ==================== -->
-
-
     <!-- ==================== Start cursor ==================== -->
 
     <div class="mouse-cursor cursor-outer"></div>
     <div class="mouse-cursor cursor-inner"></div>
 
     <!-- ==================== End cursor ==================== -->
-
-
-
     <!-- ==================== Start Navbar ==================== -->
 
     <nav class="navbar navbar-expand-lg">
@@ -84,7 +73,7 @@
 
             <!-- Logo -->
             <a class="logo" href="#">
-                <img src="img/logo.png" alt="logo">
+                <img class="pt-1" src="img/new logo gradient fill-11.png" alt="logo" style="height: 40px;width: auto;">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -95,20 +84,6 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#0"
-                            data-scroll-nav="0">Home</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">Main Home</a>
-                            <a class="dropdown-item" href="index2.html">Creative Agency</a>
-                            <a class="dropdown-item" href="index5.html">Digital Agency</a>
-                            <a class="dropdown-item" href="index4.html">Business One Page</a>
-                            <a class="dropdown-item" href="index3.html">Corporate Business</a>
-                            <a class="dropdown-item" href="index6.html">Modern Agency</a>
-                            <a class="dropdown-item" href="index7.html">Freelancer</a>
-                            <a class="dropdown-item" href="index8.html">Architecture</a>
-                        </div>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="30" data-scroll-nav="1">About</a>
                     </li>
@@ -145,18 +120,18 @@
         <div class="swiper-container parallax-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/slid/01.jpg" data-overlay-dark="6">
+                    <div class="bg-img valign" data-overlay-dark="6">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8 col-md-10">
-                                    <div class="caption center mt-30">
-                                        <h1>Business <span class="color-font">value</span> <br> <span
-                                                class="color-font">through</span> digital <span
-                                                class="color-font">products</span></h1>
-                                        <a href="#0" class="butn bord curve mt-30">
-                                            <span>Look More</span>
-                                        </a>
-                                    </div>
+                                        <div class="caption center mt-30">
+                                            <h1 style="font-family: 'trap'">Business <span class="color-font">value</span>
+                                                <br> <span class="color-font">through</span> digital <span
+                                                    class="color-font">products</span></h1>
+                                            <a href="#0" class="butn bord curve mt-30">
+                                                <span>Look More</span>
+                                            </a>
+                                        </div>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +143,8 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
                                     <div class="caption center mt-30">
-                                        <h1 class="color-font">Digital <br> Design Awards</h1>
+                                        <h1 class="color-font" style="font-family: 'trap'">Digital <br> Design Awards
+                                        </h1>
                                         <p>If you need to redesign your new project, new visual strategy, ux structure
                                             or you do have some cool ideas for collaboration.</p>
                                         <a href="#0" class="butn bord curve mt-30">
@@ -212,10 +188,9 @@
             <div class="swiper-pagination top botm "></div>
 
             <div class="social-icon">
-                <a href="#0"><i class="fab fa-facebook-f"></i></a>
-                <a href="#0"><i class="fab fa-twitter"></i></a>
-                <a href="#0"><i class="fab fa-behance"></i></a>
-                <a href="#0"><i class="fab fa-pinterest-p"></i></a>
+                <a href="https://www.facebook.com/tuftplace.in/" target="blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/tuftplace.in/" target="blank"><i class="fab fa-instagram"></i></a>
+                <a href="mailto:tuftplace@gmail.com" target="blank"><i class="fa fa-envelope"></i></a>
             </div>
         </div>
     </header>
@@ -256,7 +231,8 @@
                                 <h6>About Us</h6>
                             </div>
                             <h3 class="main-title wow" data-splitting>We are more than just <br> a digital agency.</h3>
-                            <p class="wow txt" data-splitting>We are Vie. We create award-winning websites, remarkable
+                            <p class="wow txt" data-splitting>We are Tuft Place. We create award-winning websites,
+                                remarkable
                                 brands and cutting-edge
                                 apps.Nullam
                                 imperdiet, sem at fringilla lobortis, sem nibh fringilla nibh, id gravida mi purus sit
@@ -575,7 +551,7 @@
                                     <div class="item no-bord wow fadeIn" data-wow-delay=".3s">
                                         <div class="img">
                                             <img src="img/clients/brands/01.png" alt="">
-                                            <a href="#0" class="link" data-splitting>www.Vie.com</a>
+                                            <a href="#0" class="link" data-splitting>www.tuftplace.com</a>
                                         </div>
                                     </div>
                                 </div>
@@ -583,7 +559,7 @@
                                     <div class="item no-bord wow fadeIn" data-wow-delay=".3s">
                                         <div class="img">
                                             <img src="img/clients/brands/02.png" alt="">
-                                            <a href="#0" class="link" data-splitting>www.Vie.com</a>
+                                            <a href="#0" class="link" data-splitting>www.tuftplace.com</a>
                                         </div>
                                     </div>
                                 </div>
@@ -591,7 +567,7 @@
                                     <div class="item no-bord wow fadeIn" data-wow-delay=".3s">
                                         <div class="img">
                                             <img src="img/clients/brands/03.png" alt="">
-                                            <a href="#0" class="link" data-splitting>www.Vie.com</a>
+                                            <a href="#0" class="link" data-splitting>www.tuftplace.com</a>
                                         </div>
                                     </div>
                                 </div>
@@ -599,7 +575,7 @@
                                     <div class="item no-bord wow fadeIn" data-wow-delay=".3s">
                                         <div class="img">
                                             <img src="img/clients/brands/04.png" alt="">
-                                            <a href="#0" class="link" data-splitting>www.Vie.com</a>
+                                            <a href="#0" class="link" data-splitting>www.tuftplace.com</a>
                                         </div>
                                     </div>
                                 </div>
@@ -629,7 +605,7 @@
                             </div>
                             <h3 class="co-tit custom-font mb-15">We help to create
                                 visual strategies.</h3>
-                            <p>We are Vie. We create award-winning websites, remarkable brands and cutting-edge
+                            <p>We are Tuft Place. We create award-winning websites, remarkable brands and cutting-edge
                                 apps.Nullam
                                 imperdie.</p>
                             <div class="skills-box mt-40">
@@ -990,9 +966,6 @@
                                 <a href="#0"><i class="fab fa-instagram"></i></a>
                                 <a href="#0"><i class="fab fa-youtube"></i></a>
                             </div>
-                            <div class="copy-right">
-                                <p>© 2021, Vie Template. Made with passion by <a href="#0">UI-ThemeZ</a>.</p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -1017,6 +990,10 @@
     <!-- custom scripts -->
     <script src="js/scripts.js"></script>
 
+    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/EasePack.min.js'></script>
+    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/rAF.js'></script>
+    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/TweenLite.min.js'></script>
+    <script src="../website/js/script.js"></script>
 </body>
 
 </html>
