--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <!-- Logo -->
             <a class="logo" href="#">
-                <img class="pt-1" src="img/new logo gradient fill-11.png" alt="logo" style="height: 40px;width: auto;">
+                <img class="pt-1" src="img/logo-grad.png" alt="logo" style="height: 40px;width: auto;">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -93,17 +93,24 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#0" data-scroll-nav="3">Works</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#0" data-scroll-nav="4">Testimonials</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#0" data-scroll-nav="5">Team</a>
+                        <a class="nav-link" href="#0" data-scroll-nav="4">Team</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#0" data-scroll-nav="6">Blog</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#0" data-scroll-nav="6">Contact</a>
+                        <a class="nav-link" href="#0" data-scroll-nav="5">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <div class="text-center">
+                            <a href="/products.html" class="butn color radius" style="margin-top: 10px;">
+                                <span>Check Products</span>
+                            </a>
+                        </div>
                     </li>
                 </ul>
             </div>
