new hero images and slides

--- a/index.html
+++ b/index.html
@@ -127,31 +127,54 @@
         <div class="swiper-container parallax-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/banner/06.jpg" data-overlay-dark="4">
+                    <div class="bg-img valign" data-background="img/cover/01.jpg" data-overlay-dark="4">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8 col-md-10">
-                                        <div class="caption center mt-30">
-                                            <h1 style="font-family: 'trap'">
-                                                    Creating Art one Rug at a Time
-                                                <br>
-                                                <br>
-                                            <!-- <a href="#0" class="butn bord curve mt-30">
-                                                <span>Look More</span>
-                                            </a> -->
-                                        </div>
+                                    <div class="caption center mt-30">
+                                        <h1 style="font-family: trap">Creating Art one Rug at a Time</h1>
+                                        <br>
+                                        <br>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/banner/02.jpg" data-overlay-dark="6">
+                    <div class="bg-img valign" data-background="img/cover/03.jpg" data-overlay-dark="4">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
                                     <div class="caption center mt-30">
-                                        <h1 class="color-font" style="font-family: 'trap'">Handmade with Love in India
+                                        <h1 style="font-family: 'trap'">Handmade with Love in India</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="bg-img valign" data-background="img/cover/02.jpg" data-overlay-dark="4">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-7 col-md-9">
+                                    <div class="caption center mt-30">
+                                        <h1 class="color-font" style="font-family: 'trap'">A custom Hand Made ecstasy for
+                                            your living space</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="bg-img valign" data-background="img/cover/06.jpg" data-overlay-dark="4">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-7 col-md-9">
+                                    <div class="caption center mt-30">
+                                        <h1 style="font-family: 'trap'">Weave a story for your floors
                                         </h1>
                                     </div>
                                 </div>
@@ -160,25 +183,13 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/banner/03.jpg" data-overlay-dark="6">
+                    <div class="bg-img valign" data-background="img/cover/04.jpg" data-overlay-dark="4">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
                                     <div class="caption center mt-30">
-                                        <h1 class="color-font" style="font-family: 'trap'">Personalized addition to your space</h1>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/banner/05.jpg" data-overlay-dark="6">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-7 col-md-9">
-                                    <div class="caption center mt-30">
-                                        <h1 class="color-font" style="font-family: 'trap'" >Completely Customizable Products</h1>
+                                        <h1 style="font-family: 'trap'">Perfect blend of art and comfort
+                                        </h1>
                                     </div>
                                 </div>
                             </div>
@@ -186,18 +197,18 @@
                     </div>
                 </div>
             </div>
-
+    
             <!-- slider setting -->
             <div class="setone setwo">
                 <div class="swiper-button-next swiper-nav-ctrl next-ctrl cursor-pointer">
-                    <i class="fas fa-chevron-right"></i>
+                    <i class="fa fa-angle-right"></i>
                 </div>
                 <div class="swiper-button-prev swiper-nav-ctrl prev-ctrl cursor-pointer">
-                    <i class="fas fa-chevron-left"></i>
+                    <i class="fa fa-angle-right"></i>
                 </div>
             </div>
             <div class="swiper-pagination top botm "></div>
-
+    
             <div class="social-icon">
                 <a href="https://www.facebook.com/tuftplace.in/" target="blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/tuftplace.in/" target="blank"><i class="fab fa-instagram"></i></a>
@@ -217,7 +228,7 @@
         <div class="about section-padding" data-scroll-index="1">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5">
+                    <!-- <div class="col-lg-5">
                         <div class="img-mons sm-mb30">
                             <div class="row">
                                 <div class="col-md-5 cmd-padding valign">
@@ -235,8 +246,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6 offset-lg-1 valign">
+                    </div> -->
+                    <div class="col-lg-6 valign">
                         <div class="content">
                             <div class="sub-title">
                                 <h6>About Us</h6>
@@ -254,39 +265,41 @@
                                 Personalisation being the eminent part of our mission, the possibilities are limitless. 
                                 <br>Always ready to experiment with new ideas and create something unique.
                             </p>
-                            <div class="ftbox mt-30">
-                                <ul>
-                                    <li class="wow fadeIn" data-wow-delay=".3s">
-                                        <span class="icon color-font pe-7s-gleam"></span>
-                                        <h6>Customized <br> Products</h6>
-                                        <div class="dots">
-                                            <span></span>
-                                            <span></span>
-                                            <span></span>
-                                        </div>
-                                    </li>
-                                    <li class="space wow fadeIn" data-wow-delay=".5s">
-                                        <span class="icon color-font pe-7s-paint-bucket"></span>
-                                        <h6>Best in Class<br> Finishing</h6>
-                                        <div class="dots">
-                                            <span></span>
-                                            <span></span>
-                                            <span></span>
-                                        </div>
-                                    </li>
-                                    <li class="wow fadeIn" data-wow-delay=".8s" style="margin-right: 5px;">
-                                        <span class="icon color-font pe-7s-medal"></span>
-                                        <h6>Unlimited <br> Design Ideas</h6>
-                                        <div class="dots">
-                                            <span></span>
-                                            <span></span>
-                                            <span></span>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
                         </div>
                     </div>
+                    <!-- <div class="col-lg-6 valign">
+                        <div class="ftbox mt-30">
+                            <ul>
+                                <li class="wow fadeIn" data-wow-delay=".3s">
+                                    <span class="icon color-font pe-7s-gleam"></span>
+                                    <h6>Customized <br> Products</h6>
+                                    <div class="dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </li>
+                                <li class="space wow fadeIn" data-wow-delay=".5s">
+                                    <span class="icon color-font pe-7s-paint-bucket"></span>
+                                    <h6>Best in Class<br> Finishing</h6>
+                                    <div class="dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </li>
+                                <li class="wow fadeIn" data-wow-delay=".8s" style="margin-right: 5px;">
+                                    <span class="icon color-font pe-7s-medal"></span>
+                                    <h6>Unlimited <br> Design Ideas</h6>
+                                    <div class="dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -464,7 +477,7 @@
 
         <!-- ==================== Start video ==================== -->
 
-        <section class="block-sec" data-scroll-index="4">
+        <!-- <section class="block-sec" data-scroll-index="4">
             <div class="background bg-img pt-100 pb-0 parallaxie" data-background="img/bg-vid.jpg"
                 data-overlay-dark="5">
                 <div class="container">
@@ -550,17 +563,17 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- ==================== End video ==================== -->
 
 
         <!-- ==================== Start brands ==================== -->
 
-        <section class="clients sub-bg pt-50 pb-50">
+        <!-- <section class="clients sub-bg pt-50 pb-50">
             <div class="container">
                 <div class="row">
-                    <!-- <div class="col-lg-7">
+                    <div class="col-lg-7">
                         <div class="">
                             <div class="row">
                                 <div class="col-lg-3 brands">
@@ -597,10 +610,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- ==================== End brands ==================== -->
 
@@ -904,7 +917,7 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <div class="item md-mb50">
                             <div class="title">
                                 <h5>Contact Us</h5>
@@ -913,9 +926,8 @@
                                 <li>
                                     <span class="icon pe-7s-map-marker"></span>
                                     <div class="cont">
-                                        <h6>Officeal Address</h6>
-                                        <p>504 White St . Dawsonville,
-                                            GA 30534 , New York</p>
+                                        <h6>Official Address</h6>
+                                        <p>Mumbai, India</p>
                                     </div>
                                 </li>
                                 <li>
@@ -935,7 +947,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                         <div class="item md-mb50">
                             <div class="title">
                                 <h5>Recent News</h5>
@@ -969,8 +981,8 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
+                    </div> -->
+                    <div class="col-lg-6">
                         <div class="item">
                             <div class="logo">
                                 <img src="img/fulllogo.png" alt="" style="height: 50px;width:auto">
@@ -979,7 +991,7 @@
                                 <a href="#0"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#0"><i class="fab fa-twitter"></i></a>
                                 <a href="#0"><i class="fab fa-instagram"></i></a>
-                                <a href="#0"><i class="fab fa-youtube"></i></a>
+                                <!-- <a href="#0"><i class="fab fa-youtube"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -1008,7 +1020,7 @@
     <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/EasePack.min.js'></script>
     <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/rAF.js'></script>
     <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/TweenLite.min.js'></script>
-    <script src="../website/js/script.js"></script>
+    <!-- <script src="../website/js/script.js"></script> -->
 </body>
 
 </html>
