--- a/products.html
+++ b/products.html
@@ -74,7 +74,7 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="logo" href="#">
+            <a class="logo" href="index.html">
                 <img class="pt-1" src="img/logo-grad.png" alt="logo" style="height: 40px;width: auto;">
             </a>
 
@@ -146,7 +146,7 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <div class="item md-mb50">
                             <div class="title">
                                 <h5>Contact Us</h5>
@@ -155,9 +155,8 @@
                                 <li>
                                     <span class="icon pe-7s-map-marker"></span>
                                     <div class="cont">
-                                        <h6>Officeal Address</h6>
-                                        <p>504 White St . Dawsonville,
-                                            GA 30534 , New York</p>
+                                        <h6>Official Address</h6>
+                                        <p>Mumbai, India</p>
                                     </div>
                                 </li>
                                 <li>
@@ -177,7 +176,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                         <div class="item md-mb50">
                             <div class="title">
                                 <h5>Recent News</h5>
@@ -211,8 +210,8 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
+                    </div> -->
+                    <div class="col-lg-6">
                         <div class="item">
                             <div class="logo">
                                 <img src="img/fulllogo.png" alt="" style="height: 50px;width:auto">
@@ -221,7 +220,7 @@
                                 <a href="#0"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#0"><i class="fab fa-twitter"></i></a>
                                 <a href="#0"><i class="fab fa-instagram"></i></a>
-                                <a href="#0"><i class="fab fa-youtube"></i></a>
+                                <!-- <a href="#0"><i class="fab fa-youtube"></i></a> -->
                             </div>
                         </div>
                     </div>
