--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8 col-md-10">
                                     <div class="caption center mt-30">
-                                        <h1 style="font-family: trap">Creating Art one Rug at a Time</h1>
+                                        <h1 style="font-family: trap">Creating Art one Rug at a Time.</h1>
                                         <br>
                                         <br>
                                     </div>
