--- a/index.html
+++ b/index.html
@@ -1008,18 +1008,18 @@
 
 
     <!-- jQuery -->
-    <script src="js/jquery-3.0.0.min.js"></script>
-    <script src="js/jquery-migrate-3.0.0.min.js"></script>
+    <script src="js/jquery-3.0.0.min.js" async></script>
+    <!-- <script src="js/jquery-migrate-3.0.0.min.js"></script> -->
 
     <!-- plugins -->
-    <script src="js/plugins.js"></script>
+    <script src="js/plugins.js" async></script>
 
     <!-- custom scripts -->
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js" async></script>
 
-    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/EasePack.min.js'></script>
-    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/rAF.js'></script>
-    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/TweenLite.min.js'></script>
+    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/EasePack.min.js' async></script>
+    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/rAF.js' async></script>
+    <!-- <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/TweenLite.min.js'></script> -->
     <!-- <script src="../website/js/script.js"></script> -->
 </body>
 
