--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="swiper-container parallax-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/01.jpg" data-overlay-dark="4">
+                    <div class="bg-img valign" data-background="img/cover/test.jpg" data-overlay-dark="4">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8 col-md-10">
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/03.jpg" data-overlay-dark="4">
+                    <div class="bg-img valign" data-background="img/cover/01.jpg" data-overlay-dark="4">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
@@ -1008,18 +1008,18 @@
 
 
     <!-- jQuery -->
-    <script src="js/jquery-3.0.0.min.js" async></script>
-    <!-- <script src="js/jquery-migrate-3.0.0.min.js"></script> -->
+    <script src="js/jquery-3.0.0.min.js"></script>
+    <script src="js/jquery-migrate-3.0.0.min.js"></script>
 
     <!-- plugins -->
-    <script src="js/plugins.js" async></script>
+    <script src="js/plugins.js"></script>
 
     <!-- custom scripts -->
-    <script src="js/scripts.js" async></script>
+    <script src="js/scripts.js"></script>
 
-    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/EasePack.min.js' async></script>
-    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/rAF.js' async></script>
-    <!-- <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/TweenLite.min.js'></script> -->
+    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/EasePack.min.js'></script>
+    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/rAF.js'></script>
+    <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/TweenLite.min.js'></script>
     <!-- <script src="../website/js/script.js"></script> -->
 </body>
 
