--- a/index.html
+++ b/index.html
@@ -17,15 +17,9 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
 
     <!-- Plugins -->
     <link rel="stylesheet" href="css/plugins.css" />
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
-        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
 
     <!-- Core Style Css -->
     <link rel="stylesheet" href="css/style.css" />
@@ -127,7 +121,7 @@
         <div class="swiper-container parallax-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/test.jpg" data-overlay-dark="4">
+                    <div class="bg-img valign" data-background="img/cover/test.jpg" data-overlay-dark="4" loading="lazy">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8 col-md-10">
@@ -142,7 +136,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/03.jpg" data-overlay-dark="4">
+                    <div class="bg-img valign" data-background="img/cover/03.jpg" data-overlay-dark="4" loading="lazy">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
@@ -155,7 +149,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/02.jpg" data-overlay-dark="4">
+                    <div class="bg-img valign" data-background="img/cover/02.jpg" data-overlay-dark="4" loading="lazy">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
@@ -169,7 +163,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/06.jpg" data-overlay-dark="4">
+                    <div class="bg-img valign" data-background="img/cover/06.jpg" data-overlay-dark="4" loading="lazy">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
@@ -183,7 +177,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/04.jpg" data-overlay-dark="4">
+                    <div class="bg-img valign" data-background="img/cover/04.jpg" data-overlay-dark="4" loading="lazy">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
@@ -1016,6 +1010,9 @@
 
     <!-- custom scripts -->
     <script src="js/scripts.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/EasePack.min.js'></script>
     <script src='https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/rAF.js'></script>
