--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="swiper-container parallax-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/test.jpg" data-overlay-dark="4" loading="lazy">
+                    <div class="bg-img valign" data-background="img/cover/01_01.jpg" data-overlay-dark="4" loading="lazy">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8 col-md-10">
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/03.jpg" data-overlay-dark="4" loading="lazy">
+                    <div class="bg-img valign" data-background="img/cover/03_03.jpg" data-overlay-dark="4" loading="lazy">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/cover/02.jpg" data-overlay-dark="4" loading="lazy">
+                    <div class="bg-img valign" data-background="img/cover/02_02.jpg" data-overlay-dark="4" loading="lazy">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 col-md-9">
